<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cee.me</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_header">Welcome to Cee.me</string>
    <string name="welcome_not_signed_in">(Not Signed In)</string>
    <string name="btn_check_messages">Check Messages</string>
    <string name="welcome_brag">The world\'s best sharing app!</string>
    <string name="check_messages_activity_name">Check Messages</string>
    <string name="refresh_messages">Refresh</string>
    <string name="dialog_goto_registration">This device is not yet registered. You must register the device to use this
        app.
    </string>
    <string name="do_go_registration">Register</string>
    <string name="do_cancel_registration">Cancel</string>
    <string name="not_signed_in">(not signed in)</string>
    <string name="register_activity_name">Register Device</string>
    <string name="dialog_signin_required">You must be signed in with a Google Account to access this feature. Please
        launch the app and sign in before sharing.
    </string>
    <string name="gcm_registered">From GCM: device successfully registered (regId = %1$s)!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="already_registered">This device is already registered on the GCM server</string>
    <string name="device_registration_failed">Sorry, but device registration on Cee.me has failed.</string>
    <string name="deregister">De-register</string>
    <string name="incoming_share_activity_name">Incoming Share</string>
    <string name="outgoing_share_activity_name">Cee.me</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="directory_activity_name">CeeMe Directory</string>
    <string name="directory_search_hint">Search the directory…</string>
    <string name="welcome_login_button">Sign In</string>
    <string name="btn_open">Open</string>
    <string name="canceled">Canceled.</string>
    <string name="pref_auto_open_incoming">Automatically open</string>
    <string name="pref_auto_open_incoming_summary">Automatically open incoming shares (Warning: may be dangerous)</string>
    <string name="pref_force_app_open_choose">Always choose media app</string>
    <string name="pref_force_app_open_choose_summary">Always choose the app when opening a file</string>
    <string name="pref_open_share_title">Incoming Shares</string>
    <string name="settings_activity_name">Settings</string>
    <string name="deregister_activity_name">De-register device</string>
</resources>