<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_progressBar"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="left|center_vertical"/>

        <com.qwerjk.better_text.MagicTextView
                xmlns:qwerjk="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_header"
                android:id="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:textAppearance="@style/welcome_header_style"
                android:textSize="20sp"

                qwerjk:innerShadowDy="2"
                qwerjk:innerShadowColor="#FF000000"
                qwerjk:innerShadowRadius="1"
                qwerjk:outerShadowDy="3"
                qwerjk:outerShadowColor="#FF0088ff"
                qwerjk:outerShadowRadius="10"
                qwerjk:strokeJoinStyle="miter"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                />
    </LinearLayout>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="154dp"
            android:id="@+id/logoImageView"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/ceeme_logo_1"
            android:layout_marginTop="20dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_not_signed_in"
            android:id="@+id/tv_current_account"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_login_button"
            android:id="@+id/login_button"
            android:onClick="loginButton"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:onClick="ViewStreamsButton"
            android:id="@+id/nologin_button"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>

</LinearLayout>